---
title: Smart House Domain Model
---

classDiagram
    class SmartHouse {
        +floors: List~Floor~
        +register_floor(level: int) Floor
        +register_room(floor: Floor, room_size: float, room_name: str) Room
        +get_floors() List~Floor~
        +get_rooms() List~Room~
        +get_area() float
        +get_devices() List~Device~
        +get_device_by_id(device_id: str) Device
        +register_device(room: Room, device: Device)
    }

    class Floor {
        +level: int
        +rooms: List~Room~
    }

    class Room {
        +room_name: str
        +area: float
        +devices: List~Device~
    }

    class Device {
        <<Abstract>>
        +id: str
        +device_type: str
        +supplier: str
        +model_name: str
        +room: Room
        +is_sensor() bool
        +is_actuator() bool
        +get_device_type() str
    }

    class Sensor {
        +measurements: List~Measurement~
        +is_sensor() bool
        +add_measurement(value, unit, timestamp) Measurement
        +last_measurement() Measurement
    }

    class Actuator {
        +state: bool
        +is_actuator() bool
        +turn_on(value: float)
        +turn_off()
        +is_active() bool
    }

    class Measurement {
        +sensor: Sensor
        +timestamp: str
        +value: float
        +unit: str
    }

    SmartHouse "1" *-- "0..*" Floor : contains
    Floor "1" *-- "0..*" Room : contains
    Room "1" -- "0..*" Device : registers
    Device <|-- Sensor
    Device <|-- Actuator
    Sensor "1" *-- "0..*" Measurement : produces
    Device --> Room : belongs to
